apps/infra/k8s/postgres-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      tolerations:
        - key: 'node.kubernetes.io/not-ready'
          operator: 'Exists'
          effect: 'NoSchedule'
        - key: 'node.gke.io/balloon-pod-resize'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - postgres
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              memory: '256Mi'
              cpu: '125m'
            limits:
              memory: '512Mi'
              cpu: '250m'
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-srv
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
