apps/infra/k8s/user-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      tolerations:
        - key: 'node.kubernetes.io/not-ready'
          operator: 'Exists'
          effect: 'NoSchedule'
        - key: 'node.gke.io/balloon-pod-resize'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: user-service
          # image: yaseralazm/user-service
          image: gcr.io/tms-dev-464113/user-service
          ports:
            - containerPort: 4001
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: user-srv
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
