apps/infra/k8s/vehicle-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vehicle-service
  template:
    metadata:
      labels:
        app: vehicle-service
    spec:
      tolerations:
        - key: 'node.kubernetes.io/not-ready'
          operator: 'Exists'
          effect: 'NoSchedule'
        - key: 'node.gke.io/balloon-pod-resize'
          operator: 'Exists'
          effect: 'NoSchedule'
      containers:
        - name: vehicle-service
          # image: yaseralazm/vehicle-service
          image: gcr.io/tms-dev-464113/vehicle-service
          ports:
            - containerPort: 4002
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  name: vehicle-srv
spec:
  selector:
    app: vehicle-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
